--- a/files/vil55.css
+++ b/files/vil55.css
@@ -1,5 +1,5 @@
 BODY{color:#000;background:#FFFFFF}
-P,H1,H2,H3 {margin-left:10%;margin-right:10%}
+P,H1,H2,H3 {margin-left:50px; margin-right:50px}
 TD P {margin-left:1%;margin-right:1%}
 .wde {margin-left:0;margin-right:0}
 TABLE{margin-left:0;margin-right:0}
